# rlmgw

./: .gitignore  .mcp.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: session-start.sh
.claude/skills/rlmgw/: SKILL.md
.claude/skills/rlmgw-config/: SKILL.md
.github/workflows/: test.yml
hooks/: hooks.json  session-start.sh
plugins/rlmgw/: .mcp.json  pyproject.toml
plugins/rlmgw/.claude-plugin/: plugin.json
plugins/rlmgw/hooks/: session-start.sh
plugins/rlmgw/skills/rlmgw-config/: SKILL.md
rlm/clients/: openai.py
rlm/core/: rlm.py
rlmgw/: config.py  context_pack_rlm.py  lsp_client.py  mcp_server.py  repo_context.py
skills/rlmgw/: SKILL.md
skills/rlmgw-config/: SKILL.md
tests/: test_mcp_server.py  test_plugin.py
